--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -9,6 +9,10 @@ unlisted: true
 
 Salut à tous !
 
+promote confs!
+
+promote discord!
+
 <Todo />
 
 <!-- truncate -->
@@ -67,7 +71,6 @@ Test a starter site
 Or run  `npx create-tina-app@latest`  then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
-
 
 ---
 
