--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -13,7 +13,7 @@ promote confs!
 
 promote discord!
 
-James: https://www.youtube.com/watch?v=Ow3VsOJcvpM
+James Q Quick: https://www.youtube.com/watch?v=Ow3VsOJcvpM
 
 <Todo />
 
