--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -47,7 +47,30 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ## ⚛️ React {#react}
 
-<Todo />
+---
+
+[Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html)
+
+---
+
+Layoffs - https://twitter.com/mengdi_en/status/1648718077796786177
+
+https://twitter.com/rickhanlonii/status/1648719250989694979
+
+https://twitter.com/rickhanlonii/status/1649045780005548034
+
+---
+
+- [Display a view counter on your blog with React Server Components](https://scastiel.dev/view-counter-react-server-components)
+- [OpenNext 1.0](https://sst.dev/blog/open-next-v1.html)
+- [React.dev translations update](https://twitter.com/dan_abramov/status/1649575563055493120)
+
+- [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
+- [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
+- [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
+- [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
+- [Securing your Next.js 13 application](https://www.yagiz.co/securing-your-nextjs-13-application) + https://twitter.com/yagiznizipli/status/1649920021559222273
+- [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM)
 
 <SubscribeFormEmbed />
 
@@ -77,6 +100,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 ---
 
 ## 📱 React-Native {#react-native}
+
+- https://twitter.com/thymikee/status/1648719107515207680
+- https://twitter.com/callstackio/status/1648695464546402304
+
+---
+
+- [RFC: Support Expo Config Plugins in React Native apps](https://twitter.com/TMisiukiewicz/status/1649050245106659330)
+- [Bluesky uses React-Native-Web](https://twitter.com/addyosmani/status/1650232506682331136)
+- https://syntax.fm/show/601/supper-club-nate-weinert-and-tamagui
+- https://github.com/friyiajr/SkiaAnimationShowcase
+- [RNR 264 - RN testing with Detox with Josh Justice and Jason Grosz](https://reactnativeradio.com/episodes/rnr-264-a-detox-case-study-with-josh-justice-and-jason-grosz)
 
 <Todo />
 
@@ -110,16 +144,23 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [How We Sped Up Serverless Cold Starts with Prisma by 9x](https://www.prisma.io/blog/prisma-and-serverless-73hbgKnZ6t)
+- [Oracle sends legal notice for vioation of Javascript trademark](https://twitter.com/sebastienlorber/status/1650502618760839170)
+- [Partykit - kit for building realtime collaborative applications](https://github.com/partykit/partykit)
+- [Lightning CSS 1.20](https://twitter.com/devongovett/status/1648818638479142914)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/ErfanEbrahimnia/status/1650125619655749633
+
+https://twitter.com/jaredpalmer/status/1650237683090825219
+
+https://twitter.com/jacobmparis/status/1649762401263452160
+
+https://twitter.com/thekitze/status/1649475652469370880
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 A plus 👋
