--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -47,9 +47,15 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ## ⚛️ React {#react}
 
+- [React PR - Add stub for experimental_useFormStatus](https://github.com/facebook/react/pull/26719)
+
 ---
 
 [Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html)
+
+---
+
+[Panda CSS – CSS-in-JS without Runtime Overhead](https://infinum.com/blog/panda-css-css-in-js-without-runtime-overhead/)
 
 ---
 
@@ -61,10 +67,39 @@ https://twitter.com/rickhanlonii/status/1649045780005548034
 
 ---
 
+[Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
+
+- Redux alpha?
+
+---
+
+https://twitter.com/dan_abramov/status/1648830869304426500
+
+---
+
+https://github.com/facebook/react/pull/26700
+
+---
+
+https://twitter.com/sebastienlorber/status/1650829494209466373
+
+---
+
+https://twitter.com/dan_abramov/status/1650892432119148546
+
+---
+
+- [Where to host your Remix app in 2023](https://www.jacobparis.com/guides/where-to-host-remix)
+- [Crafting the Next.js Website](https://rauno.me/craft/nextjs)
+- [Can Rust Beat Javascript in 2023?](https://joshuamo876.bearblog.dev/can-rust-beat-javascript-in-2023/)
+- [Say no to "flickering" UI: useLayoutEffect, painting and browsers story](https://www.developerway.com/posts/no-more-flickering-ui)
+- [Integrating React Flow and the Web Audio API](https://reactflow.dev/blog/react-flow-and-the-web-audio-api/)
+- [How to Write Comments in React: The Good, the Bad and the Ugly](https://dmitripavlutin.com/react-comments/)
 - [Display a view counter on your blog with React Server Components](https://scastiel.dev/view-counter-react-server-components)
 - [OpenNext 1.0](https://sst.dev/blog/open-next-v1.html)
 - [React.dev translations update](https://twitter.com/dan_abramov/status/1649575563055493120)
 
+- [Storybook Community Showcase 5](https://storybook.js.org/blog/community-showcase-5/)
 - [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
 - [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
 - [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
@@ -106,11 +141,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ---
 
+- [React-Native 0.71.7](https://github.com/facebook/react-native/releases/tag/v0.71.7)
+
+- [Using AI to Write Tests for React Components](https://www.callstack.com/blog/using-ai-to-write-tests-for-react-components)
 - [RFC: Support Expo Config Plugins in React Native apps](https://twitter.com/TMisiukiewicz/status/1649050245106659330)
 - [Bluesky uses React-Native-Web](https://twitter.com/addyosmani/status/1650232506682331136)
 - https://syntax.fm/show/601/supper-club-nate-weinert-and-tamagui
 - https://github.com/friyiajr/SkiaAnimationShowcase
 - [RNR 264 - RN testing with Detox with Josh Justice and Jason Grosz](https://reactnativeradio.com/episodes/rnr-264-a-detox-case-study-with-josh-justice-and-jason-grosz)
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -10% (code "REACTHEBDO").
+- 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, 18-19 Mai) nous offre -10% sur les entrées (code "thisweekinreact").
 
 <Todo />
 
@@ -148,6 +189,11 @@ Pas de contenu cette semaine 😅
 - [Oracle sends legal notice for vioation of Javascript trademark](https://twitter.com/sebastienlorber/status/1650502618760839170)
 - [Partykit - kit for building realtime collaborative applications](https://github.com/partykit/partykit)
 - [Lightning CSS 1.20](https://twitter.com/devongovett/status/1648818638479142914)
+- [What's new in ECMAScript 2023](https://pawelgrzybek.com/whats-new-in-ecmascript-2023/)
+- [Rich Harris on frameworks, the web, and the edge](https://www.youtube.com/watch?v=uXCipjbcQfM)
+- [Introducing npm package provenance](https://github.blog/2023-04-19-introducing-npm-package-provenance/)
+- [The “const” Deception](https://www.joshwcomeau.com/javascript/the-const-deception/)
+- [Picking the Right Tool for Maneuvering JavaScript's Event Loop](https://www.macarthur.me/posts/navigating-the-event-loop)
 
 ---
 
