--- a/website/newsletter/143/index.mdx
+++ b/website/newsletter/143/index.mdx
@@ -68,17 +68,17 @@ Or run  `npx create-tina-app@latest` then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
-
 ---
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 👥 [App.js](https://appjs.co/) (Krakow, May 10-12) is offering us [-20% on workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, May 18-19) is offering us -10% on entries (code "thisweekinreact").
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er June) is offering us -10% on entries (code "REACTHEBDO").
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
-
 
 🧑‍💼 [**Passionfroot - Senior Full-stack Engineer (Remix) - €160k+, Berlin/remote**](https://passionfroot.recruitee.com/o/senior-fullstack-engineer)
 
