--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -13,6 +13,8 @@ promote confs!
 
 promote discord!
 
+https://thisweekinreact.com/chat
+
 James Q Quick: https://www.youtube.com/watch?v=Ow3VsOJcvpM
 
 <Todo />
@@ -59,17 +61,28 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ---
 
-Layoffs - https://twitter.com/mengdi_en/status/1648718077796786177
+- Vague de licenciement chez Meta, dont au moins 4 profils tech liés à React / Relay.
+
+https://twitter.com/mengdi_en/status/1648718077796786177
 
 https://twitter.com/rickhanlonii/status/1648719250989694979
 
 https://twitter.com/rickhanlonii/status/1649045780005548034
 
+https://twitter.com/rickhanlonii/status/1648659987676143618
+
+https://twitter.com/DevRelSean/status/1649466893806215172
+
+https://twitter.com/mattcarrollcode/status/1648770402272018432
+
 ---
 
-[Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
+- [Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
+- [Redux Toolkit v2.0.0 alpha.5](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5)
 
 - Redux alpha?
+
+https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5
 
 ---
 
@@ -89,6 +102,12 @@ https://twitter.com/dan_abramov/status/1650892432119148546
 
 ---
 
+- [Micro Frontends Next Generation - A React Server Components Playground](https://github.com/unstubbable/mfng)
+- [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleur intuition sur le fonctionnement des Server Components.
+- [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
+- [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
+- [Simple RSC, Deno Edition](https://github.com/itsMapleLeaf/simple-rsc-deno)
+- [The Evolution of React Rendering Architectures & Web Performance](https://www.iamtk.co/the-evolution-of-react-rendering-architectures-and-web-performance)
 - [Where to host your Remix app in 2023](https://www.jacobparis.com/guides/where-to-host-remix)
 - [Crafting the Next.js Website](https://rauno.me/craft/nextjs)
 - [Can Rust Beat Javascript in 2023?](https://joshuamo876.bearblog.dev/can-rust-beat-javascript-in-2023/)
@@ -101,11 +120,12 @@ https://twitter.com/dan_abramov/status/1650892432119148546
 
 - [Storybook Community Showcase 5](https://storybook.js.org/blog/community-showcase-5/)
 - [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
-- [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
 - [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
 - [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
 - [Securing your Next.js 13 application](https://www.yagiz.co/securing-your-nextjs-13-application) + https://twitter.com/yagiznizipli/status/1649920021559222273
 - [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM)
+- [React and TypeScript Stopped Fighting?](https://www.youtube.com/watch?v=sr8bwLXDm3U)
+- [How To Fix NextJS 13's N+1 Problem](https://www.youtube.com/watch?v=FfHsIio4aCU)
 
 <SubscribeFormEmbed />
 
@@ -141,6 +161,8 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ---
 
+- [Mark Lawlor (NativeWind) joins Expo](https://twitter.com/mark__lawlor/status/1648834143659384832)
+- [Bluesky - Universal Expo app](https://twitter.com/Baconbrix/status/1650608419135700993). On a donc Twitter et son concurrent Bluesky [utilisent tous les 2 React-Native-Web](https://twitter.com/sebastienlorber/status/1650488087430963204).
 - [React-Native 0.71.7](https://github.com/facebook/react-native/releases/tag/v0.71.7)
 
 - [Using AI to Write Tests for React Components](https://www.callstack.com/blog/using-ai-to-write-tests-for-react-components)
