--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -197,7 +197,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [React Query - Crash Course pour débutant](https://www.youtube.com/watch?v=LiEHntSffPk)
+- [Node.js v20 et son système de permissions ! - Actus JS de la semaine](https://www.youtube.com/watch?v=SFUGis_CR0U)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
