--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -49,83 +49,42 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ## ⚛️ React {#react}
 
-- [React PR - Add stub for experimental_useFormStatus](https://github.com/facebook/react/pull/26719)
-
----
-
-[Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html)
-
----
-
 [Panda CSS – CSS-in-JS without Runtime Overhead](https://infinum.com/blog/panda-css-css-in-js-without-runtime-overhead/)
 
 ---
 
-- Vague de licenciement chez Meta, dont au moins 4 profils tech liés à React / Relay.
-
-https://twitter.com/mengdi_en/status/1648718077796786177
-
-https://twitter.com/rickhanlonii/status/1648719250989694979
-
-https://twitter.com/rickhanlonii/status/1649045780005548034
-
-https://twitter.com/rickhanlonii/status/1648659987676143618
-
-https://twitter.com/DevRelSean/status/1649466893806215172
-
-https://twitter.com/mattcarrollcode/status/1648770402272018432
-
----
-
-- [Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
-- [Redux Toolkit v2.0.0 alpha.5](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5)
-
-- Redux alpha?
-
-https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5
-
----
-
-https://twitter.com/dan_abramov/status/1648830869304426500
-
----
-
-https://github.com/facebook/react/pull/26700
-
----
-
-https://twitter.com/sebastienlorber/status/1650829494209466373
-
----
-
-https://twitter.com/dan_abramov/status/1650892432119148546
-
----
-
-- [Micro Frontends Next Generation - A React Server Components Playground](https://github.com/unstubbable/mfng)
-- [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleur intuition sur le fonctionnement des Server Components.
-- [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
-- [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
-- [Simple RSC, Deno Edition](https://github.com/itsMapleLeaf/simple-rsc-deno)
-- [The Evolution of React Rendering Architectures & Web Performance](https://www.iamtk.co/the-evolution-of-react-rendering-architectures-and-web-performance)
-- [Where to host your Remix app in 2023](https://www.jacobparis.com/guides/where-to-host-remix)
-- [Crafting the Next.js Website](https://rauno.me/craft/nextjs)
-- [Can Rust Beat Javascript in 2023?](https://joshuamo876.bearblog.dev/can-rust-beat-javascript-in-2023/)
-- [Say no to "flickering" UI: useLayoutEffect, painting and browsers story](https://www.developerway.com/posts/no-more-flickering-ui)
-- [Integrating React Flow and the Web Audio API](https://reactflow.dev/blog/react-flow-and-the-web-audio-api/)
-- [How to Write Comments in React: The Good, the Bad and the Ugly](https://dmitripavlutin.com/react-comments/)
-- [Display a view counter on your blog with React Server Components](https://scastiel.dev/view-counter-react-server-components)
-- [OpenNext 1.0](https://sst.dev/blog/open-next-v1.html)
+- 👥 Nouvelle vague de licenciements chez Meta qui touche aussi des profils tech open-source, dont [Mengdi Chen](https://twitter.com/mengdi_en/status/1648718077796786177) (React DevTools), [Robert Balicky](https://twitter.com/StatisticsFTW/status/1648820621252653056) (Relay), [Matt Carroll](https://twitter.com/mattcarrollcode/status/1648770402272018432) (DevRel React, en recherche d'un nouveau poste) et [Sean Keegan](https://twitter.com/DevRelSean/status/1649466893806215172) (DevRel React, en recherche d'un nouveau poste).
+- 👀 [React PR - experimental_useFormStatus](https://github.com/facebook/react/pull/26722)
+- 🧵 [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleur intuition sur le fonctionnement des Server Components.
+- 🧵 [Dan Abramov on the origins / inspirations of React Server Components (PHP/Hack/XHP)](https://twitter.com/dan_abramov/status/1648830869304426500)
+- 🧵 [useLayoutEffect + queueMicrotask](https://twitter.com/sebastienlorber/status/1650829494209466373): je partage une astuce qui a suscité plus d'intérêt que je ne pensais 😄
 - [React.dev translations update](https://twitter.com/dan_abramov/status/1649575563055493120)
-
-- [Storybook Community Showcase 5](https://storybook.js.org/blog/community-showcase-5/)
-- [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
-- [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
-- [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
-- [Securing your Next.js 13 application](https://www.yagiz.co/securing-your-nextjs-13-application) + https://twitter.com/yagiznizipli/status/1649920021559222273
-- [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM)
-- [React and TypeScript Stopped Fighting?](https://www.youtube.com/watch?v=sr8bwLXDm3U)
-- [How To Fix NextJS 13's N+1 Problem](https://www.youtube.com/watch?v=FfHsIio4aCU)
+- 🐦 [Dan Abramov on using Preact Signals](https://twitter.com/dan_abramov/status/1650892432119148546): cette librairie patch React, qui ne peut garantir son bon fonctionnement si vous décidez de l'utiliser.
+- 📦 [Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html)
+- 📦 [Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
+- 📦 [Redux Toolkit v2.0.0 alpha.5](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5)
+- 📦 [T3 Env](https://env.t3.gg/): nouvelle solution pour parser les variables d'environnement avec Zod, avec une intégration Next.js.
+- 📦 [Micro Frontends Next Generation - A React Server Components Playground](https://github.com/unstubbable/mfng)
+- 📦 [OpenNext 1.0](https://sst.dev/blog/open-next-v1.html)
+- 📦 [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
+- 📦 [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
+- 📦 [Simple RSC, Deno Edition](https://github.com/itsMapleLeaf/simple-rsc-deno)
+- 📜 [How we built the Storybook Day 3D animation](https://varun.ca/storybook-day/) + https://twitter.com/winkerVSbecks/status/1650918867781439491
+- 📜 [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
+- 📜 [Creative ways of using useReducer](https://www.code-insights.dev/posts/creative-ways-of-using-usereducer)
+- 📜 [The Evolution of React Rendering Architectures & Web Performance](https://www.iamtk.co/the-evolution-of-react-rendering-architectures-and-web-performance)
+- 📜 [Where to host your Remix app in 2023](https://www.jacobparis.com/guides/where-to-host-remix)
+- 📜 [Crafting the Next.js Website](https://rauno.me/craft/nextjs)
+- 📜 [Can Rust Beat Javascript in 2023?](https://joshuamo876.bearblog.dev/can-rust-beat-javascript-in-2023/)
+- 📜 [Say no to "flickering" UI: useLayoutEffect, painting and browsers story](https://www.developerway.com/posts/no-more-flickering-ui)
+- 📜 [Integrating React Flow and the Web Audio API](https://reactflow.dev/blog/react-flow-and-the-web-audio-api/)
+- 📜 [How to Write Comments in React: The Good, the Bad and the Ugly](https://dmitripavlutin.com/react-comments/)
+- 📜 [Display a view counter on your blog with React Server Components](https://scastiel.dev/view-counter-react-server-components)
+- 📜 [Storybook Community Showcase 5](https://storybook.js.org/blog/community-showcase-5/)
+- 📜 [Securing your Next.js 13 application](https://www.yagiz.co/securing-your-nextjs-13-application) + https://twitter.com/yagiznizipli/status/1649920021559222273
+- 🎥 [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM)
+- 🎥 [React and TypeScript Stopped Fighting?](https://www.youtube.com/watch?v=sr8bwLXDm3U)
+- 🎥 [How To Fix NextJS 13's N+1 Problem](https://www.youtube.com/watch?v=FfHsIio4aCU)
 
 <SubscribeFormEmbed />
 
@@ -161,21 +120,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ---
 
-- [Mark Lawlor (NativeWind) joins Expo](https://twitter.com/mark__lawlor/status/1648834143659384832)
-- [Bluesky - Universal Expo app](https://twitter.com/Baconbrix/status/1650608419135700993). On a donc Twitter et son concurrent Bluesky [utilisent tous les 2 React-Native-Web](https://twitter.com/sebastienlorber/status/1650488087430963204).
-- [React-Native 0.71.7](https://github.com/facebook/react-native/releases/tag/v0.71.7)
-
-- [Using AI to Write Tests for React Components](https://www.callstack.com/blog/using-ai-to-write-tests-for-react-components)
-- [RFC: Support Expo Config Plugins in React Native apps](https://twitter.com/TMisiukiewicz/status/1649050245106659330)
-- [Bluesky uses React-Native-Web](https://twitter.com/addyosmani/status/1650232506682331136)
-- https://syntax.fm/show/601/supper-club-nate-weinert-and-tamagui
-- https://github.com/friyiajr/SkiaAnimationShowcase
-- [RNR 264 - RN testing with Detox with Josh Justice and Jason Grosz](https://reactnativeradio.com/episodes/rnr-264-a-detox-case-study-with-josh-justice-and-jason-grosz)
+- 👤 [Mark Lawlor (NativeWind) joins Expo](https://twitter.com/mark__lawlor/status/1648834143659384832): bonne nouvelle pour la communauté, un dev de plus qui va travailler sur le support web/cross-platform.
+- 👀 [Bluesky - Universal Expo app](https://twitter.com/Baconbrix/status/1650608419135700993). On a donc Twitter et son concurrent Bluesky [utilisent tous les 2 React-Native-Web](https://twitter.com/sebastienlorber/status/1650488087430963204).
+- 📜 [Using AI to Write Tests for React Components](https://www.callstack.com/blog/using-ai-to-write-tests-for-react-components)
+- 📦 [React-Native 0.71.7](https://github.com/facebook/react-native/releases/tag/v0.71.7)
+- 📦 [SkiaAnimationShowcase](https://github.com/friyiajr/SkiaAnimationShowcase)
+- 💬 [RFC: Support Expo Config Plugins in React Native apps](https://twitter.com/TMisiukiewicz/status/1649050245106659330)
+- 🎙️ [Syntax FM - Supper Club × Nate Weinert and Tamagui](https://syntax.fm/show/601/supper-club-nate-weinert-and-tamagui)
+- 🎙️ [RNR 264 - RN testing with Detox with Josh Justice and Jason Grosz](https://reactnativeradio.com/episodes/rnr-264-a-detox-case-study-with-josh-justice-and-jason-grosz)
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -10% (code "REACTHEBDO").
 - 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
 - 👥 [Chain React](https://chainreactconf.com/) (Portland, 18-19 Mai) nous offre -10% sur les entrées (code "thisweekinreact").
-
-<Todo />
 
 ---
 
@@ -202,34 +157,26 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
-
 ---
 
 ## 🔀 Autre {#other}
 
 - [How We Sped Up Serverless Cold Starts with Prisma by 9x](https://www.prisma.io/blog/prisma-and-serverless-73hbgKnZ6t)
-- [Oracle sends legal notice for vioation of Javascript trademark](https://twitter.com/sebastienlorber/status/1650502618760839170)
-- [Partykit - kit for building realtime collaborative applications](https://github.com/partykit/partykit)
-- [Lightning CSS 1.20](https://twitter.com/devongovett/status/1648818638479142914)
+- [Oracle sends legal notice for vioation of JavaScript trademark](https://twitter.com/sebastienlorber/status/1650502618760839170)
+- [Partykit - Kit for building realtime collaborative applications](https://github.com/partykit/partykit)
 - [What's new in ECMAScript 2023](https://pawelgrzybek.com/whats-new-in-ecmascript-2023/)
 - [Rich Harris on frameworks, the web, and the edge](https://www.youtube.com/watch?v=uXCipjbcQfM)
 - [Introducing npm package provenance](https://github.blog/2023-04-19-introducing-npm-package-provenance/)
 - [The “const” Deception](https://www.joshwcomeau.com/javascript/the-const-deception/)
 - [Picking the Right Tool for Maneuvering JavaScript's Event Loop](https://www.macarthur.me/posts/navigating-the-event-loop)
+- [Badging for Home Screen Web Apps](https://webkit.org/blog/14112/badging-for-home-screen-web-apps/)
+- [Lightning CSS 1.20](https://twitter.com/devongovett/status/1648818638479142914)
+- [Rspack 0.1.9](https://twitter.com/rspack_dev/status/1650802734248108032)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/ErfanEbrahimnia/status/1650125619655749633
-
-https://twitter.com/jaredpalmer/status/1650237683090825219
-
-https://twitter.com/jacobmparis/status/1649762401263452160
-
-https://twitter.com/thekitze/status/1649475652469370880
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/143/meme.jpg)](https://twitter.com/jacobmparis/status/1649762401263452160)
 
 A plus 👋
