--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -54,20 +54,20 @@ Testez le dès maintenant en moins de 30 minutes !
 ---
 
 - 👥 Nouvelle vague de licenciements chez Meta qui touche aussi des profils tech open-source, dont [Mengdi Chen](https://twitter.com/mengdi_en/status/1648718077796786177) (React DevTools), [Robert Balicky](https://twitter.com/StatisticsFTW/status/1648820621252653056) (Relay), [Matt Carroll](https://twitter.com/mattcarrollcode/status/1648770402272018432) (DevRel React, en recherche d'un nouveau poste) et [Sean Keegan](https://twitter.com/DevRelSean/status/1649466893806215172) (DevRel React, en recherche d'un nouveau poste).
-- 👀 [React PR - experimental_useFormStatus](https://github.com/facebook/react/pull/26722)
-- 🧵 [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleur intuition sur le fonctionnement des Server Components.
+- 👀 [React PR - experimental_useFormStatus](https://twitter.com/sebastienlorber/status/1651135782990561280): un nouveau hook `useFormState()` pourrait arriver dans React. Me fait penser à `useFetcher()` de Remix.
+- 🧵 [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleure intuition sur le fonctionnement des Server Components.
 - 🧵 [Dan Abramov on the origins / inspirations of React Server Components (PHP/Hack/XHP)](https://twitter.com/dan_abramov/status/1648830869304426500)
 - 🧵 [useLayoutEffect + queueMicrotask](https://twitter.com/sebastienlorber/status/1650829494209466373): je partage une astuce qui a suscité plus d'intérêt que je ne pensais 😄
-- [React.dev translations update](https://twitter.com/dan_abramov/status/1649575563055493120)
+- 👀 [React.dev translation update](https://twitter.com/dan_abramov/status/1649575563055493120): les repositories de traduction de la nouvelle doc sont à jour. Il est possible de commencer à traduire la nouvelle doc.
 - 🐦 [Dan Abramov on using Preact Signals](https://twitter.com/dan_abramov/status/1650892432119148546): cette librairie patch React, qui ne peut garantir son bon fonctionnement si vous décidez de l'utiliser.
-- 📦 [Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html)
+- 📦 [Vite 4.3](https://vitejs.dev/blog/announcing-vite4-3.html): grosses améliorations de perf sur un benchmark avec 1000 composants React.
 - 📦 [Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0)
-- 📦 [Redux Toolkit v2.0.0 alpha.5](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5)
+- 📦 [Redux Toolkit v2.0.0 alpha.5](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.5): nouvelle API `combineSlices` pour lazy-loader les reducers.
 - 📦 [T3 Env](https://env.t3.gg/): nouvelle solution pour parser les variables d'environnement avec Zod, avec une intégration Next.js.
 - 📦 [Micro Frontends Next Generation - A React Server Components Playground](https://github.com/unstubbable/mfng)
 - 📦 [OpenNext 1.0](https://sst.dev/blog/open-next-v1.html)
 - 📦 [react-three-offscreen](https://github.com/pmndrs/react-three-offscreen) + https://twitter.com/0xca0a/status/1649387930450894850
-- 📦 [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support Next.js + Forgetti
+- 📦 [Million.js 2.3.0](https://twitter.com/aidenybai/status/1650406345517199361): support de Next.js et intégration optimizer Forgetti. Un nouveau package [Hundred.js](https://twitter.com/aidenybai/status/1651072640650727424) pour comprendre le fonctionnement du "block virtual DOM".
 - 📦 [Simple RSC, Deno Edition](https://github.com/itsMapleLeaf/simple-rsc-deno)
 - 📜 [How we built the Storybook Day 3D animation](https://varun.ca/storybook-day/) + https://twitter.com/winkerVSbecks/status/1650918867781439491
 - 📜 [Why You Don't Need Signals in React](https://blog.axlight.com/posts/why-you-dont-need-signals-in-react/) + https://twitter.com/dai_shi/status/1650126458520760320
