--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /143
-title: "React Hebdo #143: ..."
+title: "React Hebdo #143: RSC Quizz, useFormStatus, Next.js Website, Panda CSS, useLayoutEffect, Million.js, Immer, Super Apps, React-Three-Fiber, Vite..."
 authors: [slorber]
 date: 04-25-2023
 image: /img/TWIR_POST.png
@@ -9,15 +9,15 @@ unlisted: true
 
 Salut à tous !
 
-promote confs!
+On a beaucoup de bons articles React cette semaine, mais aussi quelques belles releases. J'ai bien aimé le breakdown des animations sur le nouveau site Next.js, et découvrir la nouvelle librairie Panda CSS.
 
-promote discord!
+On sent que React se frameworkise de plus en plus avec les Server Components. Un nouveau hook `useFormStatus` pointe le bout de son nez.
 
-https://thisweekinreact.com/chat
+Callstack nous propose une belle resource sur les Super Apps en React-Native.
 
-James Q Quick: https://www.youtube.com/watch?v=Ow3VsOJcvpM
+Il y a eu une grosse vague de licenciements chez Meta, qui a aussi touché quelques développeurs de notre écosystème 😓. N'hésitez pas à contacter ceux qui sont en recherche d'une nouvelle opportunité.
 
-<Todo />
+J'ai réorganisé le [chat Discord](https://thisweekinreact.com/chat). Pour le rendre plus actif, j'ai passé la majorité des canaux en Anglais, et on va accueillir nos confrères internationaux.
 
 <!-- truncate -->
 
@@ -92,7 +92,7 @@ Panda CSS est une nouvelle librairie CSS-in-JS sans runtime en cours de dévelop
 - 📦 [Lingui 4.0](https://github.com/lingui/js-lingui/releases/tag/v4.0.0)
 - 📦 [Micro Frontends Next Generation - A React Server Components Playground](https://github.com/unstubbable/mfng)
 - 📦 [Simple RSC, Deno Edition](https://github.com/itsMapleLeaf/simple-rsc-deno)
-- 🎥 [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM)
+- 🎥 [Next.js Image Component Just Got Way Better](https://www.youtube.com/watch?v=Ow3VsOJcvpM): usage de Cloudinary Image dans une app Next.js. J'en profite pour remercier James qui [me fait de la pub](https://www.youtube.com/clip/UgkxZ3ySVUr0oCmNn_VQcBJGOFPdSG2V_h3h) 🤗.
 - 🎥 [React and TypeScript Stopped Fighting?](https://www.youtube.com/watch?v=sr8bwLXDm3U)
 - 🎥 [How To Fix NextJS 13's N+1 Problem](https://www.youtube.com/watch?v=FfHsIio4aCU)
 
