--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -4,14 +4,13 @@ title: "React Hebdo #143: RSC Quizz, useFormStatus, Next.js Website, Panda CSS, 
 authors: [slorber]
 date: 04-25-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
 
 On a beaucoup de bons articles React cette semaine, mais aussi quelques belles releases. J'ai bien aimé le breakdown des animations sur le nouveau site Next.js, et découvrir la nouvelle librairie Panda CSS.
 
-On sent que React se frameworkise de plus en plus avec les Server Components. Un nouveau hook `useFormStatus` pointe le bout de son nez.
+On sent que React devient de plus en plus un framework avec les Server Components. Un nouveau hook `useFormStatus` pointe le bout de son nez.
 
 Callstack nous propose une belle resource sur les Super Apps en React-Native.
 
@@ -53,7 +52,7 @@ Testez le dès maintenant en moins de 30 minutes !
 
 **[Crafting the Next.js Website](https://rauno.me/craft/nextjs)**
 
-Vous avez peut-être remarqué la [nouvelle landing page de Nextjs.org](https://nextjs.org/)? Rauno travaille chez Vercel et nous propose de déconstruire les subtilités de cette page. Perso j'adore leur technique de gradient tracing
+Vous avez peut-être remarqué la [nouvelle landing page de Nextjs.org](https://nextjs.org/)? Rauno travaille chez Vercel et nous propose de déconstruire les subtilités de cette page. Perso j'adore leur technique de gradient tracing! Une implémentation React intéressante avec un super résultat.
 
 ---
 
@@ -167,8 +166,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [React Query - Crash Course pour débutant](https://www.youtube.com/watch?v=LiEHntSffPk)
-- [Node.js v20 et son système de permissions ! - Actus JS de la semaine](https://www.youtube.com/watch?v=SFUGis_CR0U)
+- 🎥 [React Query - Crash Course pour débutant](https://www.youtube.com/watch?v=LiEHntSffPk)
+- 🎥 [Node.js v20 et son système de permissions ! - Actus JS de la semaine](https://www.youtube.com/watch?v=SFUGis_CR0U)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
